--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-    <h1>Hello World</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1>Tuco Websites</h1>
+    <p><a href="https://homieka.github.io/Color-Options//tuco-logistics-Professional-Hybrid.html">Professional Hybrid</a></p>
     </body>
 </html>
