--- a/index.html
+++ b/index.html
@@ -1,7 +1,111 @@
 <!DOCTYPE html>
-<html>
-    <body>
-    <h1>Tuco Websites</h1>
-    <p><a href="https://homieka.github.io/Color-Options//tuco-logistics-Professional-Hybrid.html">Professional Hybrid</a></p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TUCO Website Options</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
+            line-height: 1.6;
+            padding: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            background-color: #f5f5f5;
+        }
+
+        h1 {
+            text-align: center;
+            color: #1a1a1a;
+            margin-bottom: 2rem;
+            font-size: 2.5rem;
+        }
+
+        .container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+        }
+
+        .section {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        h2 {
+            color: #2d2d2d;
+            margin-bottom: 1rem;
+            padding-bottom: 0.5rem;
+            border-bottom: 2px solid #eaeaea;
+        }
+
+        .links {
+            display: flex;
+            flex-direction: column;
+            gap: 0.8rem;
+        }
+
+        a {
+            color: #0066cc;
+            text-decoration: none;
+            padding: 0.5rem;
+            border-radius: 6px;
+            transition: all 0.2s ease;
+        }
+
+        a:hover {
+            background-color: #f0f7ff;
+            color: #004499;
+        }
+
+        @media (max-width: 768px) {
+            body {
+                padding: 1rem;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+        }
+    </style>
+</head>
+<body>
+    <h1>TUCO Website Design Options</h1>
+    
+    <div class="container">
+        <div class="section">
+            <h2>Color Options</h2>
+            <div class="links">
+                <a href="https://homieka.github.io/Color-Options//tuco-logistics-Professional-Hybrid.html">Professional Hybrid</a>
+                <a href="https://homieka.github.io/Color-Options//tuco-logistics-nature-inspired.html">Nature Inspired</a>
+                <a href="https://homieka.github.io/Color-Options//tuco-logistics-professional-cool.html">Professional Cool</a>
+                <a href="https://homieka.github.io/Color-Options//tuco-logistics-professional-modern.html">Professional Modern</a>
+                <a href="https://homieka.github.io/Color-Options//tuco-logistics-sunset-warmth.html">Sunset Warmth</a>
+                <a href="https://homieka.github.io/Color-Options//tuco-website-Combined-Professional-Nature.html">Combined Professional Nature</a>
+            </div>
+        </div>
+
+        <div class="section">
+            <h2>Website Designs</h2>
+            <div class="links">
+                <a href="https://homieka.github.io/Website-Design//Website-Design1.html">Design Option 1</a>
+                <a href="https://homieka.github.io/Website-Design//Website-Design2.html">Design Option 2</a>
+                <a href="https://homieka.github.io/Website-Design//Website-Design3.html">Design Option 3</a>
+                <a href="https://homieka.github.io/Website-Design//Website-Design4.html">Design Option 4</a>
+                <a href="https://homieka.github.io/Website-Design//Website-Design5.html">Design Option 5</a>
+                <a href="https://homieka.github.io/Website-Design//Website-Design6.html">Design Option 6</a>
+                <a href="https://homieka.github.io/Website-Design//Website-Design7.html">Design Option 7</a>
+                <a href="https://homieka.github.io/Website-Design//Website-Design8.html">Design Option 8</a>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
