--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TUCO Website Options</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
         }
 
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Arial, sans-serif;
             line-height: 1.6;
             padding: 2rem;
-            max-width: 1200px;
+            max-width: 1400px;
             margin: 0 auto;
             background-color: #f5f5f5;
         }
@@ -27,43 +28,100 @@
             font-size: 2.5rem;
         }
 
-        .container {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-        }
-
         .section {
-            background: white;
-            padding: 2rem;
-            border-radius: 12px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+            margin-bottom: 4rem;
         }
 
         h2 {
             color: #2d2d2d;
-            margin-bottom: 1rem;
+            margin-bottom: 2rem;
             padding-bottom: 0.5rem;
             border-bottom: 2px solid #eaeaea;
+            font-size: 1.75rem;
         }
 
-        .links {
+        .card {
+            background: white;
+            border-radius: 0.5rem;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+            margin-bottom: 1.5rem;
+            overflow: hidden;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .card:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+        }
+
+        .card-header {
+            padding: 1.5rem;
+            border-bottom: 1px solid #f0f0f0;
+        }
+
+        .card-content {
+            padding: 1.5rem;
+        }
+
+        .color-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 1rem;
+            margin-bottom: 1rem;
+        }
+
+        .color-item {
             display: flex;
             flex-direction: column;
-            gap: 0.8rem;
+            gap: 0.5rem;
         }
 
-        a {
+        .color-swatch {
+            height: 4rem;
+            width: 100%;
+            border-radius: 0.25rem;
+            box-shadow: inset 0 2px 4px rgba(0,0,0,0.1);
+        }
+
+        .color-info {
+            font-size: 0.875rem;
+        }
+
+        .color-name {
+            font-weight: 500;
+        }
+
+        .color-hex {
+            font-family: monospace;
+            color: #666;
+        }
+
+        .card-link {
+            display: block;
+            padding: 1rem;
+            text-align: center;
+            background: #f8f9fa;
             color: #0066cc;
             text-decoration: none;
-            padding: 0.5rem;
-            border-radius: 6px;
-            transition: all 0.2s ease;
+            border-top: 1px solid #eee;
+            transition: background-color 0.2s ease;
         }
 
-        a:hover {
+        .card-link:hover {
             background-color: #f0f7ff;
             color: #004499;
+        }
+
+        .description {
+            color: #666;
+            font-size: 0.9rem;
+            margin: 0.5rem 0;
+        }
+
+        .design-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 1.5rem;
         }
 
         @media (max-width: 768px) {
@@ -78,34 +136,234 @@
     </style>
 </head>
 <body>
-    <h1>TUCO Website Design Options</h1>
+    <h1>TUCO Website Options</h1>
     
-    <div class="container">
-        <div class="section">
-            <h2>Color Options</h2>
-            <div class="links">
-                <a href="https://homieka.github.io/Color-Options//tuco-logistics-Professional-Hybrid.html">Professional Hybrid</a>
-                <a href="https://homieka.github.io/Color-Options//tuco-logistics-nature-inspired.html">Nature Inspired</a>
-                <a href="https://homieka.github.io/Color-Options//tuco-logistics-professional-cool.html">Professional Cool</a>
-                <a href="https://homieka.github.io/Color-Options//tuco-logistics-professional-modern.html">Professional Modern</a>
-                <a href="https://homieka.github.io/Color-Options//tuco-logistics-sunset-warmth.html">Sunset Warmth</a>
-                <a href="https://homieka.github.io/Color-Options//tuco-website-Combined-Professional-Nature.html">Combined Professional Nature</a>
-            </div>
-        </div>
-
-        <div class="section">
-            <h2>Website Designs</h2>
-            <div class="links">
-                <a href="https://homieka.github.io/Website-Design//Website-Design1.html">Design Option 1</a>
-                <a href="https://homieka.github.io/Website-Design//Website-Design2.html">Design Option 2</a>
-                <a href="https://homieka.github.io/Website-Design//Website-Design3.html">Design Option 3</a>
-                <a href="https://homieka.github.io/Website-Design//Website-Design4.html">Design Option 4</a>
-                <a href="https://homieka.github.io/Website-Design//Website-Design5.html">Design Option 5</a>
-                <a href="https://homieka.github.io/Website-Design//Website-Design6.html">Design Option 6</a>
-                <a href="https://homieka.github.io/Website-Design//Website-Design7.html">Design Option 7</a>
-                <a href="https://homieka.github.io/Website-Design//Website-Design8.html">Design Option 8</a>
-            </div>
-        </div>
+    <div class="section">
+        <h2>Color Options</h2>
+        <div id="color-options"></div>
     </div>
+
+    <div class="section">
+        <h2>Website Designs</h2>
+        <div id="design-options" class="design-grid"></div>
+    </div>
+
+    <script>
+        const palettes = [
+            {
+                name: "Nature Inspired",
+                url: "https://homieka.github.io/Color-Options//tuco-logistics-nature-inspired.html",
+                colors: {
+                    navy: "#001228",
+                    blue: "#abcc66",
+                    teal: "#62bda5",
+                    sage: "#0aa1c8",
+                    lime: "#c4ce47",
+                    white: "#fffffe"
+                },
+                description: "A fresh palette mixing cool oceanic tones with organic greens"
+            },
+            {
+                name: "Sunset Warmth",
+                url: "https://homieka.github.io/Color-Options//tuco-logistics-sunset-warmth.html",
+                colors: {
+                    darkBlue: "#273248",
+                    burgundy: "#af4f41",
+                    orange: "#fc7643",
+                    peach: "#ffa364",
+                    cream: "#ffebd2",
+                    white: "#ffffff"
+                },
+                description: "Warm and inviting with sunset-inspired hues"
+            },
+            {
+                name: "Professional Modern",
+                url: "https://homieka.github.io/Color-Options//tuco-logistics-professional-modern.html",
+                colors: {
+                    darkNavy: "#02085e",
+                    gold: "#f9d448",
+                    peach: "#ec9f62",
+                    white: "#ffffff",
+                    darkGrey: "#262b41",
+                    lightGrey: "#f1f1f1",
+                    mediumGrey: "#787b84"
+                },
+                description: "Corporate style with bold accents and neutral support colors"
+            },
+            {
+                name: "Professional Cool",
+                url: "https://homieka.github.io/Color-Options//tuco-logistics-professional-cool.html",
+                colors: {
+                    darkPurple: "#383467",
+                    lightGrey: "#f0f2f6",
+                    peach: "#ec9f62",
+                    medGrey: "#d7dce0",
+                    offWhite: "#f1f3f2",
+                    white: "#ffffff",
+                    textGrey: "#6B7280"
+                },
+                description: "Professional and accessible with balanced contrast levels"
+            },
+            {
+                name: "Professional Hybrid",
+                url: "https://homieka.github.io/Color-Options//tuco-logistics-Professional-Hybrid.html",
+                colors: {
+                    primaryBlue: "#02085e",
+                    secondaryPurple: "#383467",
+                    accentOrange: "#fc7643",
+                    lightGrey: "#f0f2f6",
+                    mediumGrey: "#d7dce0",
+                    textGrey: "#6B7280",
+                    white: "#ffffff",
+                    offWhite: "#f1f3f2"
+                },
+                description: "A balanced palette combining corporate authority with modern warmth"
+            },
+            {
+                name: "Combined Professional Nature",
+                url: "https://homieka.github.io/Color-Options//tuco-website-Combined-Professional-Nature.html",
+                colors: {
+                    primaryBlue: "#02085e",
+                    secondaryPurple: "#383467",
+                    teal: "#62bda5",
+                    sage: "#0aa1c8",
+                    lime: "#c4ce47",
+                    accentOrange: "#fc7643",
+                    peach: "#ec9f62",
+                    gold: "#f9d448",
+                    lightGrey: "#f0f2f6",
+                    mediumGrey: "#d7dce0",
+                    textGrey: "#6B7280",
+                    darkGrey: "#262b41",
+                    white: "#ffffff",
+                    offWhite: "#f1f3f2"
+                },
+                description: "A comprehensive palette combining professional authority with natural elements"
+            }
+        ];
+
+        const designs = [
+            {
+                name: "Design Option 1",
+                url: "https://homieka.github.io/Website-Design//Website-Design1.html",
+                description: "Modern and minimalist design with focus on visual hierarchy"
+            },
+            {
+                name: "Design Option 2",
+                url: "https://homieka.github.io/Website-Design//Website-Design2.html",
+                description: "Bold and dynamic layout with emphasis on content flow"
+            },
+            {
+                name: "Design Option 3",
+                url: "https://homieka.github.io/Website-Design//Website-Design3.html",
+                description: "Clean and professional design with balanced whitespace"
+            },
+            {
+                name: "Design Option 4",
+                url: "https://homieka.github.io/Website-Design//Website-Design4.html",
+                description: "Contemporary design with focus on user experience"
+            },
+            {
+                name: "Design Option 5",
+                url: "https://homieka.github.io/Website-Design//Website-Design5.html",
+                description: "Elegant and sophisticated layout with attention to detail"
+            },
+            {
+                name: "Design Option 6",
+                url: "https://homieka.github.io/Website-Design//Website-Design6.html",
+                description: "Innovation-focused design with modern aesthetics"
+            },
+            {
+                name: "Design Option 7",
+                url: "https://homieka.github.io/Website-Design//Website-Design7.html",
+                description: "Strategic layout emphasizing content hierarchy"
+            },
+            {
+                name: "Design Option 8",
+                url: "https://homieka.github.io/Website-Design//Website-Design8.html",
+                description: "Forward-thinking design with intuitive navigation"
+            }
+        ];
+
+        function formatColorName(name) {
+            return name.replace(/([A-Z])/g, ' $1').trim()
+                .split(' ')
+                .map(word => word.charAt(0).toUpperCase() + word.slice(1))
+                .join(' ');
+        }
+
+        function createPaletteCard(palette) {
+            const card = document.createElement('div');
+            card.className = 'card';
+
+            const header = document.createElement('div');
+            header.className = 'card-header';
+            header.innerHTML = `
+                <h3 class="text-xl font-bold">${palette.name}</h3>
+                <p class="description">${palette.description}</p>
+            `;
+
+            const content = document.createElement('div');
+            content.className = 'card-content';
+            const colorGrid = document.createElement('div');
+            colorGrid.className = 'color-grid';
+
+            Object.entries(palette.colors).forEach(([name, hex]) => {
+                const colorItem = document.createElement('div');
+                colorItem.className = 'color-item';
+                colorItem.innerHTML = `
+                    <div class="color-swatch" style="background-color: ${hex}"></div>
+                    <div class="color-info">
+                        <div class="color-name">${formatColorName(name)}</div>
+                        <div class="color-hex">${hex}</div>
+                    </div>
+                `;
+                colorGrid.appendChild(colorItem);
+            });
+
+            content.appendChild(colorGrid);
+            
+            const link = document.createElement('a');
+            link.href = palette.url;
+            link.className = 'card-link';
+            link.textContent = 'View Design';
+
+            card.appendChild(header);
+            card.appendChild(content);
+            card.appendChild(link);
+            return card;
+        }
+
+        function createDesignCard(design) {
+            const card = document.createElement('div');
+            card.className = 'card';
+
+            const header = document.createElement('div');
+            header.className = 'card-header';
+            header.innerHTML = `
+                <h3 class="text-xl font-bold">${design.name}</h3>
+                <p class="description">${design.description}</p>
+            `;
+
+            const link = document.createElement('a');
+            link.href = design.url;
+            link.className = 'card-link';
+            link.textContent = 'View Design';
+
+            card.appendChild(header);
+            card.appendChild(link);
+            return card;
+        }
+
+        const colorContainer = document.getElementById('color-options');
+        palettes.forEach(palette => {
+            colorContainer.appendChild(createPaletteCard(palette));
+        });
+
+        const designContainer = document.getElementById('design-options');
+        designs.forEach(design => {
+            designContainer.appendChild(createDesignCard(design));
+        });
+    </script>
 </body>
 </html>
