--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             const link = document.createElement('a');
             link.href = palette.url;
             link.className = 'card-link';
-            link.textContent = 'View Design';
+            link.textContent = 'View Colors';
 
             card.appendChild(header);
             card.appendChild(content);
