--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </style>
 </head>
 <body>
-    <h1>TUCO Website Options</h1>
+    <h1>TUCO Website Design and Color Options</h1>
     
     <div class="section">
         <h2>Color Options</h2>
