--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         const palettes = [
             {
                 name: "Nature Inspired",
-                url: "https://homieka.github.io/Color-Options//tuco-logistics-nature-inspired.html",
+                url: "https://homieka.github.io/Color-Options/tuco-logistics-nature-inspired.html",
                 colors: {
                     navy: "#001228",
                     blue: "#abcc66",
@@ -165,7 +165,7 @@
             },
             {
                 name: "Sunset Warmth",
-                url: "https://homieka.github.io/Color-Options//tuco-logistics-sunset-warmth.html",
+                url: "https://homieka.github.io/Color-Options/tuco-logistics-sunset-warmth.html",
                 colors: {
                     darkBlue: "#273248",
                     burgundy: "#af4f41",
@@ -178,7 +178,7 @@
             },
             {
                 name: "Professional Modern",
-                url: "https://homieka.github.io/Color-Options//tuco-logistics-professional-modern.html",
+                url: "https://homieka.github.io/Color-Options/tuco-logistics-professional-modern.html",
                 colors: {
                     darkNavy: "#02085e",
                     gold: "#f9d448",
@@ -192,7 +192,7 @@
             },
             {
                 name: "Professional Cool",
-                url: "https://homieka.github.io/Color-Options//tuco-logistics-professional-cool.html",
+                url: "https://homieka.github.io/Color-Options/tuco-logistics-professional-cool.html",
                 colors: {
                     darkPurple: "#383467",
                     lightGrey: "#f0f2f6",
@@ -206,7 +206,7 @@
             },
             {
                 name: "Professional Hybrid",
-                url: "https://homieka.github.io/Color-Options//tuco-logistics-Professional-Hybrid.html",
+                url: "https://homieka.github.io/Color-Options/tuco-logistics-Professional-Hybrid.html",
                 colors: {
                     primaryBlue: "#02085e",
                     secondaryPurple: "#383467",
@@ -221,7 +221,7 @@
             },
             {
                 name: "Combined Professional Nature",
-                url: "https://homieka.github.io/Color-Options//tuco-website-Combined-Professional-Nature.html",
+                url: "https://homieka.github.io/Color-Options/tuco-website-Combined-Professional-Nature.html",
                 colors: {
                     primaryBlue: "#02085e",
                     secondaryPurple: "#383467",
@@ -245,43 +245,43 @@
         const designs = [
             {
                 name: "Design Option 1",
-                url: "https://homieka.github.io/Website-Design//Website-Design1.html",
-                description: "Modern and minimalist design with focus on visual hierarchy"
+                url: "https://homieka.github.io/Website-Design/Website-Design1.html",
+                description: "-"
             },
             {
                 name: "Design Option 2",
-                url: "https://homieka.github.io/Website-Design//Website-Design2.html",
-                description: "Bold and dynamic layout with emphasis on content flow"
+                url: "https://homieka.github.io/Website-Design/Website-Design2.html",
+                description: "-"
             },
             {
                 name: "Design Option 3",
-                url: "https://homieka.github.io/Website-Design//Website-Design3.html",
-                description: "Clean and professional design with balanced whitespace"
+                url: "https://homieka.github.io/Website-Design/Website-Design3.html",
+                description: "-"
             },
             {
                 name: "Design Option 4",
-                url: "https://homieka.github.io/Website-Design//Website-Design4.html",
-                description: "Contemporary design with focus on user experience"
+                url: "https://homieka.github.io/Website-Design/Website-Design4.html",
+                description: "-"
             },
             {
                 name: "Design Option 5",
-                url: "https://homieka.github.io/Website-Design//Website-Design5.html",
-                description: "Elegant and sophisticated layout with attention to detail"
+                url: "https://homieka.github.io/Website-Design/Website-Design5.html",
+                description: "-"
             },
             {
                 name: "Design Option 6",
-                url: "https://homieka.github.io/Website-Design//Website-Design6.html",
-                description: "Innovation-focused design with modern aesthetics"
+                url: "https://homieka.github.io/Website-Design/Website-Design6.html",
+                description: "-"
             },
             {
                 name: "Design Option 7",
-                url: "https://homieka.github.io/Website-Design//Website-Design7.html",
-                description: "Strategic layout emphasizing content hierarchy"
+                url: "https://homieka.github.io/Website-Design/Website-Design7.html",
+                description: "-"
             },
             {
                 name: "Design Option 8",
-                url: "https://homieka.github.io/Website-Design//Website-Design8.html",
-                description: "Forward-thinking design with intuitive navigation"
+                url: "https://homieka.github.io/Website-Design/Website-Design8.html",
+                description: "-"
             }
         ];
 
