--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
         // Your data
         const colorRankingData = [
             { name: 'Nature Inspired', firstPlace: 8, secondPlace: 5, thirdPlace: 3, averageRank: 2.14, totalScore: 98 },
-            { name: 'Combined Pro Nature', firstPlace: 6, secondPlace: 4, thirdPlace: 3, averageRank: 2.95, totalScore: 82 },
+            { name: 'Combined Professional Nature', firstPlace: 6, secondPlace: 4, thirdPlace: 3, averageRank: 2.95, totalScore: 82 },
             { name: 'Professional Hybrid', firstPlace: 3, secondPlace: 4, thirdPlace: 3, averageRank: 3.45, totalScore: 71 },
             { name: 'Sunset Warmth', firstPlace: 2, secondPlace: 3, thirdPlace: 3, averageRank: 3.68, totalScore: 65 },
             { name: 'Professional Cool', firstPlace: 1, secondPlace: 3, thirdPlace: 3, averageRank: 3.91, totalScore: 58 },
