--- a/index.html
+++ b/index.html
@@ -421,98 +421,98 @@
     </div>
 
     <script>
-        const palettes = [
-            {
-                name: "Nature Inspired",
-                url: "https://homieka.github.io/Color-Options/tuco-logistics-nature-inspired.html",
-                colors: {
-                    navy: "#001228",
-                    blue: "#abcc66",
-                    teal: "#62bda5",
-                    sage: "#0aa1c8",
-                    lime: "#c4ce47",
-                    white: "#fffffe"
-                },
-                description: "A fresh palette mixing cool oceanic tones with organic greens"
-            },
-            {
-                name: "Sunset Warmth",
-                url: "https://homieka.github.io/Color-Options/tuco-logistics-sunset-warmth.html",
-                colors: {
-                    darkBlue: "#273248",
-                    burgundy: "#af4f41",
-                    orange: "#fc7643",
-                    peach: "#ffa364",
-                    cream: "#ffebd2",
-                    white: "#ffffff"
-                },
-                description: "Warm and inviting with sunset-inspired hues"
-            },
-            {
-                name: "Professional Modern",
-                url: "https://homieka.github.io/Color-Options/tuco-logistics-professional-modern.html",
-                colors: {
-                    darkNavy: "#02085e",
-                    gold: "#f9d448",
-                    peach: "#ec9f62",
-                    white: "#ffffff",
-                    darkGrey: "#262b41",
-                    lightGrey: "#f1f1f1",
-                    mediumGrey: "#787b84"
-                },
-                description: "Corporate style with bold accents and neutral support colors"
-            },
-            {
-                name: "Professional Cool",
-                url: "https://homieka.github.io/Color-Options/tuco-logistics-professional-cool.html",
-                colors: {
-                    darkPurple: "#383467",
-                    lightGrey: "#f0f2f6",
-                    peach: "#ec9f62",
-                    medGrey: "#d7dce0",
-                    offWhite: "#f1f3f2",
-                    white: "#ffffff",
-                    textGrey: "#6B7280"
-                },
-                description: "Professional and accessible with balanced contrast levels"
-            },
-            {
-                name: "Professional Hybrid",
-                url: "https://homieka.github.io/Color-Options/tuco-logistics-Professional-Hybrid.html",
-                colors: {
-                    primaryBlue: "#02085e",
-                    secondaryPurple: "#383467",
-                    accentOrange: "#fc7643",
-                    lightGrey: "#f0f2f6",
-                    mediumGrey: "#d7dce0",
-                    textGrey: "#6B7280",
-                    white: "#ffffff",
-                    offWhite: "#f1f3f2"
-                },
-                description: "A balanced palette combining corporate authority with modern warmth"
-            },
-            {
-                name: "Combined Professional Nature",
-                url: "https://homieka.github.io/Color-Options/tuco-website-Combined-Professional-Nature.html",
-                colors: {
-                    primaryBlue: "#02085e",
-                    secondaryPurple: "#383467",
-                    teal: "#62bda5",
-                    sage: "#0aa1c8",
-                    lime: "#c4ce47",
-                    accentOrange: "#fc7643",
-                    peach: "#ec9f62",
-                    gold: "#f9d448",
-                    lightGrey: "#f0f2f6",
-                    mediumGrey: "#d7dce0",
-                    textGrey: "#6B7280",
-                    darkGrey: "#262b41",
-                    white: "#ffffff",
-                    offWhite: "#f1f3f2"
-                },
-                description: "A comprehensive palette combining professional authority with natural elements"
-            }
-        ];
+const palettes = [
+    {
+        name: "Nature Inspired",
+        url: "https://homieka.github.io/Color-Options/tuco-logistics-nature-inspired.html",
+        colors: {
+            "Dark Navy":     "#001228",
+            "Sage Green":    "#abcc66",
+            "Teal":         "#62bda5",
+            "Azure Blue":    "#0aa1c8",
+            "Chartreuse":   "#c4ce47",
+            "White":        "#fffffe"
+        },
+        description: "A fresh palette mixing cool oceanic tones with organic greens"
+    },
+    {
+        name: "Sunset Warmth",
+        url: "https://homieka.github.io/Color-Options/tuco-logistics-sunset-warmth.html",
+        colors: {
+            "Navy":         "#273248",
+            "Burgundy":     "#af4f41",
+            "Orange":       "#fc7643",
+            "Peach":        "#ffa364",
+            "Cream":        "#ffebd2",
+            "White":        "#ffffff"
+        },
+        description: "Warm and inviting with sunset-inspired hues"
+    },
+    {
+        name: "Professional Modern",
+        url: "https://homieka.github.io/Color-Options/tuco-logistics-professional-modern.html",
+        colors: {
+            "Primary Blue": "#02085e",
+            "Gold":         "#f9d448",
+            "Peach":        "#ec9f62",
+            "White":        "#ffffff",
+            "Dark Grey":    "#262b41",
+            "Light Grey":   "#f1f1f1",
+            "Medium Grey":  "#787b84"
+        },
+        description: "Corporate style with bold accents and neutral support colors"
+    },
+    {
+        name: "Professional Cool",
+        url: "https://homieka.github.io/Color-Options/tuco-logistics-professional-cool.html",
+        colors: {
+            "Primary Purple": "#383467",
+            "Light Grey":     "#f0f2f6",
+            "Peach":          "#ec9f62",
+            "Medium Grey":    "#d7dce0",
+            "Off White":      "#f1f3f2",
+            "White":          "#ffffff",
+            "Text Grey":      "#6B7280"
+        },
+        description: "Professional and accessible with balanced contrast levels"
+    },
+    {
+        name: "Professional Hybrid",
+        url: "https://homieka.github.io/Color-Options/tuco-logistics-Professional-Hybrid.html",
+        colors: {
+            "Primary Blue":   "#02085e",
+            "Primary Purple": "#383467",
+            "Orange":         "#fc7643",
+            "Light Grey":     "#f0f2f6",
+            "Medium Grey":    "#d7dce0",
+            "Text Grey":      "#6B7280",
+            "White":          "#ffffff",
+            "Off White":      "#f1f3f2"
+        },
+        description: "A balanced palette combining corporate authority with modern warmth"
+    },
+    {
+        name: "Combined Professional Nature",
+        url: "https://homieka.github.io/Color-Options/tuco-website-Combined-Professional-Nature.html",
+        colors: {
+            "Primary Blue":   "#02085e",
+            "Primary Purple": "#383467",
+            "Teal":          "#62bda5",
+            "Sage":          "#0aa1c8",
+            "Lime":          "#c4ce47",
+            "Orange":        "#fc7643",
+            "Peach":         "#ec9f62",
+            "Gold":          "#f9d448",
+            "Light Grey":    "#f0f2f6",
+            "Medium Grey":   "#d7dce0",
+            "Text Grey":     "#6B7280",
+            "Dark Grey":     "#262b41",
+            "White":         "#ffffff",
+            "Off White":     "#f1f3f2"
+        },
+        description: "A comprehensive palette combining professional authority with natural elements"
+    }
+];
 
         const designs = [
             {
