--- a/index.html
+++ b/index.html
@@ -429,8 +429,8 @@ const palettes = [
             "Dark Navy":     "#001228",
             "Sage Green":    "#abcc66",
             "Teal":         "#62bda5",
-            "Azure Blue":    "#0aa1c8",
-            "Chartreuse":   "#c4ce47",
+            "Sage":    "#0aa1c8",
+            "Lime":   "#c4ce47",
             "White":        "#fffffe"
         },
         description: "A fresh palette mixing cool oceanic tones with organic greens"
