--- a/cs_tool.html
+++ b/cs_tool.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shipment Tracking Dashboard</title>
+    <title>Customer Service Reporting Tool</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/lucide-icons@0.294.0/dist/lucide.min.js" rel="stylesheet">
     <style>
@@ -56,7 +56,7 @@
     <div class="container mx-auto p-3">
             <div class="bg-white shadow-md rounded-lg">
                 <div class="flex justify-between items-center p-3 border-b">
-                    <h1 class="text-2xl font-bold text-gray-800">Shipment Tracking Dashboard</h1>
+                    <h1 class="text-2xl font-bold text-gray-800">Customer Service Reporting Tool</h1>
  
                     
                 <!-- Filter Buttons -->
@@ -291,7 +291,7 @@
 
 
     <script>
-        // Shipment Tracking Dashboard JavaScript
+        
 
         let todayDate = new Date("2024-03-22");
         let formattedDate = todayDate.toDateString();  // e.g., "Tue May 01 2024"
