--- a/cs_tool.html
+++ b/cs_tool.html
@@ -761,7 +761,7 @@
                          <td class="p-3 border-b">
                             <!-- Flag button to toggle the shipment as important -->
                             <button onclick="shipmentTracker.toggleFlag('${shipment.connote}')" class="px-3 py-1 rounded ${shipment.isFlagged ? 'bg-red-500' : 'bg-green-500'} text-white hover:bg-opacity-80">
-                                ${shipment.isFlagged ? 'Unflag' : 'Flag'}
+                                ${shipment.isFlagged ? 'TRUE' : 'FALSE'}
                         </button>
 
                         <td class="p-3 border-b">
