--- a/cs_tool.html
+++ b/cs_tool.html
@@ -150,7 +150,7 @@
                                 Important
                             </th>
                             <th class="p-3 text-center font-semibold text-gray-700 border-b">
-                                Actions
+                                More Information
                             </th>
                         </tr>
                     </thead>
